Project

General

Profile

Actions

Bug #16297

closed

calling undefined allocator by `Class.instance_method(:allocate)`

Bug #16297: calling undefined allocator by `Class.instance_method(:allocate)`

Added by nobu (Nobuyoshi Nakada) almost 7 years ago. Updated over 2 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
[ruby-dev:50856]

Description

For instance, Rational.allocate is undefined.

Rational.allocate #=> undefined method `allocate' for Rational:Class (NoMethodError)

But it can be called by Class.instance_method(:allocate).

Class.instance_method(:allocate).bind_call(Rational) #=> (0/1)
Class.instance_method(:allocate).bind(Rational).call #=> (0/1)

These allocators are defined for Marshal, and undefined as methods.

Updated by usa (Usaku NAKAMURA) over 5 years ago Actions #1 [ruby-dev:51027]

  • Backport changed from 2.5: REQUIRED, 2.6: REQUIRED to 2.5: REQUIRED, 2.6: DONE

ruby_2_6 r67896 merged revision(s) f72dc407.

Updated by usa (Usaku NAKAMURA) over 5 years ago Actions #2 [ruby-dev:51028]

usa (Usaku NAKAMURA) wrote in #note-1:

ruby_2_6 r67896 merged revision(s) f72dc407.

note that ruby_2_6 does not have UnboundMethod#bind_call.

Updated by jhawthorn (John Hawthorn) over 2 years ago Actions #3 [ruby-dev:52076]

I'm not sure if there's a deeper problem this causes, but it is still possible after this patch to call the allocator on a Rational through defining an arbitrary allocate method.

>> def Rational.allocate; end
=> :allocate
>> Class.instance_method(:allocate).bind_call(Rational)
=> (0/1)
Actions

Also available in: PDF Atom