Prohibit calling undefined allocator [Bug #16297]